# lisgo

./: .gitignore  .ocamlformat  README.MD  dune  dune-project  expr.ml  go.ml  lexer.ml  lisgo.ml  package.json  parser.mly  typ.ml
esy.lock/: index.json
lib/: common.ml  dune  expr.ml  goast.ml  golang.ml  lexer.ml  lib.ml  parser.automaton  parser.mly  transpile.ml  typ.ml
test/: dune  tests.ml
